# haskell-exercises

./: README.md  exercises.cabal
src/: 05.hs  06.hs  07.hs  08.hs  09.hs  09char.hs  10.hs  11.hs  12.hs  14.hs  15.hs  16.hs  17.hs  18.hs  20.hs  21.hs  22.hs  23.hs  24.hs  Addition.hs  Cipher.hs  MaybeT.hs  altparsing.hs  bifunctor.hs  caprev.hs  ch05.hs  ch06.hs  ch07.hs  ch4.hs  cipher.hs  construction.hs  eithert.hs  exercises.hs  fizzbuzz.hs  fractions.hs  funcinst.hs  heavylifting.hs  hutton.hs  idcomp.hs  learn.hs  (+20 more)
src/all-about-monads/: callcc.hs  cont.hs  sheep.hs
