name:          exercises
version:       0.1.0.0
license-file:  LICENSE
author:        Neill Robson
maintainer:    neill@neillrobson.com
category:      Education
build-type:    Simple
cabal-version: >=1.10

library
  exposed-modules:  Addition
  ghc-options:      -Wall -fwarn-tabs
  build-depends:
      base        >=4.7 && <5
    , checkers
    , hspec
    , QuickCheck

  hs-source-dirs:   src
  default-language: Haskell2010
